--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -19,7 +19,7 @@
 <div class="container">
 	<div>
 		<h1>Add file</h1>
-		<form method="post">
+		<form method="post" enctype="multipart/form-data">
 			<p><input type=file name=file placeholder=files-upload>
 			<p><input type=submit value=Upload>
 		</form>
