[navbar] added upload link

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,8 @@
 				</li>
 				<li role="presentation"><a href="{{ url_for('signup') }}">Sign up</a>
 				</li>
+				<li role="presentation"><a href="{{ url_for('file_upload') }}">Upload</a>
+				</li>
 			</ul>
 		</nav>
 		<h3 class="text-muted">Python Flask App</h3>
