--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,8 @@
 			{% block head %}
 				<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 				<link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-				<title>{% block title %}{% endblock %} - My Webpage</title>
+				<link href="/static/style.css" rel="stylesheet">
+				<title>{% block title %}{% endblock %}</title>
 			{% endblock %}
 	</head>
 
