--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-		<div id="container">
+		<div class="container">
 			<div id="content">{% block content %}{% endblock %}</div>
 			<div id="footer">
 				{% block footer %}
@@ -18,5 +18,10 @@
 				{% endblock %}
 			</div>
 		</div>
+		<script
+			  src="https://code.jquery.com/jquery-3.1.1.min.js"
+			  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+			  crossorigin="anonymous"></script>
+		<script type="text/javascript" src="/static/upload.js"></script>
 	</body>
 </html>
