--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -16,7 +16,7 @@
 	<h3 class="text-muted">Python Flask App</h3>
 </div>
 
-<div class="container">
+<!-- <div class="container">
 	<div>
 		<h1>Add file</h1>
 		<form method="post" enctype="multipart/form-data">
@@ -26,7 +26,7 @@
 	</div>
 </div>
 
-
+ -->
 
 <div class="container" xmlns="http://www.w3.org/1999/html">
     <div class="row">
@@ -45,7 +45,7 @@
     </div>
 </div>
 
-<input id="upload-input" type="file" name="uploads[]"></br>
+<input id="upload-input" type="file" name="file"></br>
 
 
 
