[templates] Add signup template

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,12 +17,13 @@
 </div>
 
 <div class="jumbotron">
-	<h1>Login</h1>
+	<h1>Sign up</h1>
 	<form method="post">
 		<p><input type=text name=username placeholder=username>
-		<p><input type=text name=email placeholder=username>
+		<p><input type=email name=email placeholder=username>
 		<p><input type=password name=password placeholder=password>
 		<p><input type=password name=password_con placeholder="confirm password">
+		<p><input type=text name=name placeholder="full name">
 		<p><input type=submit value="Sign up">
 	</form>
 </div>
