--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -45,7 +45,7 @@
     </div>
 </div>
 
-<input id="upload-input" type="file" name="file" multiple></br>
+<input id="upload-input" type="file" name="file[]" multiple></br>
 
 
 
