--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -30,17 +30,13 @@
 
 <div class="container" xmlns="http://www.w3.org/1999/html">
     <div class="row">
-        <div class="col-xs-12">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <span class="glyphicon glyphicon-cloud-upload"></span>
-                    <h2>File Uploader</h2>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar"></div>
-                    </div>
-                    <button class="btn btn-lg upload-btn" type="button">Upload File</button>
-                </div>
-            </div>
+        <div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4 col-xs-12 upload-box">
+			<button class="btn upload-btn" type="button">Upload File</button>
+			<div class="progress">
+			  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+			    <span class="sr-only">0%</span>
+			  </div>
+			</div>
         </div>
     </div>
 </div>
