--- a/static/style.css
+++ b/static/style.css
@@ -10,60 +10,65 @@ body {
 	color: black;
 }
 
+img {
+	max-width: 100%;
+}
+
+h4 {
+	padding-bottom: 30px;
+	color: #B8BDC1;
+}
+
 .btn:focus, .upload-btn:focus{
-    outline: 0 !important;
+	outline: 0 !important;
 }
 
 .row {
-    margin-top: 80px;
+	margin-top: 80px;
 }
 
 .upload-btn {
-    color: #ffffff;
-    background-color: #F89406;
-    border: none;
-    width: 200px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+	color: #ffffff;
+	background-color: #F89406;
+	border: none;
+	width: 200px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .upload-btn:hover,
 .upload-btn:focus,
 .upload-btn:active,
 .upload-btn.active {
-    color: #ffffff;
-    background-color: #FA8900;
-    border: none;
+	color: #ffffff;
+	background-color: #FA8900;
+	border: none;
 }
 
 .upload-box{
-    padding: 10px;
-    border: 2px solid black;
-    border-radius: 5px;
-    position: center;
+	padding: 10px;
+	border: 2px solid black;
+	border-radius: 5px;
+	position: center;
 
 }
 
 .progress{
-    margin: 10px;
-}
-
-h4 {
-    padding-bottom: 30px;
-    color: #B8BDC1;
+	margin: 10px;
 }
 
 .glyphicon {
-    font-size: 5em;
-    color: #9CA3A9;
+	font-size: 5em;
+	color: #9CA3A9;
 }
 
 .panel {
-    padding-top: 20px;
-    padding-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 #upload-input {
-    display: none;
+	display: none;
 }
+
