--- a/templates/signup.html
+++ b/templates/signup.html
@@ -20,7 +20,7 @@
 	<h1>Sign up</h1>
 	<form method="post">
 		<p><input type=text name=username placeholder=username>
-		<p><input type=email name=email placeholder=username>
+		<p><input type=email name=email placeholder=email>
 		<p><input type=password name=password placeholder=password>
 		<p><input type=password name=password_con placeholder="confirm password">
 		<p><input type=text name=name placeholder="full name">
