--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
 			{% block head %}
 				<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 				<link href="/static/style.css" rel="stylesheet">
+				<link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
 				<title>{% block title %}{% endblock %}</title>
 			{% endblock %}
 	</head>
