--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
 			{% block head %}
 				<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 				<link href="/static/style.css" rel="stylesheet">
-				<link rel="shortcut icon" type="image/ico" href="static/favicon.ico"/>
+				<link rel="shortcut icon" type="image/png" href="static/favicon.png"/>
 				<title>{% block title %}{% endblock %}</title>
 			{% endblock %}
 	</head>
