--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -16,32 +16,57 @@
 	<h3 class="text-muted">Python Flask App</h3>
 </div>
 
+
+
+<!-- 		subject = request.session['subject']
+        user = request.session['user']
+        script_name = request.form['script_name']
+        description = request.form['description']
+ -->
 <!-- <div class="container">
 	<div>
 		<h1>Add file</h1>
-		<form method="post" enctype="multipart/form-data">
-			<p><input type=file name=file placeholder=files-upload>
-			<p><input type=submit value=Upload>
-		</form>
+		
 	</div>
-</div>
+</div> -->
 
- -->
+
+
+
+
+
 
 <div class="container" xmlns="http://www.w3.org/1999/html">
     <div class="row">
         <div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4 col-xs-12 upload-box">
-			<button class="btn upload-btn" type="button">Upload File</button>
+			<!-- <button class="btn upload-btn" type="button">Upload File</button> -->
+			
+			<form method="post" enctype="multipart/form-data">
+				<!-- <p><input type=file name=file placeholder=files-upload> -->
+				<input id="upload-input" type="file" name="file" multiple></br>
+				
+				Decscription<br>
+				<input id="description" type="text" name="description"><br>
+				
+				Name<br>
+				<input id="script_name" type="text" name="script_name"><br>
+				
+				<!-- <p><input type=submit value=Upload> -->
+				<button class="btn" type="submit">Upload File</button>
+			
+
+			</form>
+			
 			<div class="progress">
 			  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
 			    <span class="sr-only">0%</span>
 			  </div>
 			</div>
+
         </div>
     </div>
 </div>
 
-<input id="upload-input" type="file" name="file" multiple></br>
 
 
 
