--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -41,7 +41,7 @@
         <div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4 col-xs-12 upload-box">
 			<!-- <button class="btn upload-btn" type="button">Upload File</button> -->
 			
-			<form method="post" enctype="multipart/form-data">
+			<!--<form method="post" enctype="multipart/form-data">-->
 				<!-- <p><input type=file name=file placeholder=files-upload> -->
 				<input id="upload-input" type="file" name="file" multiple></br>
 				
@@ -55,7 +55,7 @@
 				<button id="submit-file-upload" class="btn" type="submit">Upload File</button>
 			
 
-			</form>
+			<!--</form>-->
 			
 			<div class="progress">
 			  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
