[uploads] multi fix

--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -52,7 +52,7 @@
 				<input id="script_name" type="text" name="script_name"><br>
 				
 				<!-- <p><input type=submit value=Upload> -->
-				<button id="submit-file-upload" class="btn" type="submit">Upload File</button>
+				<button id="submit-file-upload" class="btn" type="button">Upload File</button>
 			
 
 			<!--</form>-->
