--- a/templates/list_uploads.html
+++ b/templates/list_uploads.html
@@ -20,7 +20,7 @@
 	<h1>Uploaded files</h1>
 	{% if files %}
 	{% for file in files %}
-	<p><a href="static/uploads/{{ file }}"><img src="static/uploads/{{ file }}" alt="{{ file }}" /></a></p>
+	<p><a href="static/uploads/{{ name }}/{{ file }}"><img src="static/uploads/{{ name }}/{{ file }}" alt="{{ file }}" /></a></p>
 	{% endfor %}
 	{% else %}
 	<p>There are no files</p>
