--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,30 +1,21 @@
 {% extends "layout.html" %}
+
 {% block title %}Index{% endblock %}
 
 {% block content %}
-<div class="header">
-	<nav>
-		<ul class="nav nav-pills pull-right">
-			<li role="presentation"><a href="{{ url_for('index') }}">Home</a>
-			</li>
-			<li role="presentation"><a href="{{ url_for('login') }}">Log in</a>
-			</li>
-			<li role="presentation" class="active"><a href="#">Sign up</a>
-			</li>
-		</ul>
-	</nav>
-	<h3 class="text-muted">Scriptar</h3>
-</div>
+	<div class="jumbotron">
+		<h1>Sign up</h1>
+		<form method="post">
+			<p><input type=text name=username placeholder=username>
+			<p><input type=email name=email placeholder=email>
+			<p><input type=password name=password placeholder=password>
+			<p><input type=password name=password_con placeholder="confirm password">
+			<p><input type=text name=name placeholder="full name">
+			<p><input type=submit value="Sign up">
+		</form>
+	</div>
+{% endblock %}
 
-<div class="jumbotron">
-	<h1>Sign up</h1>
-	<form method="post">
-		<p><input type=text name=username placeholder=username>
-		<p><input type=email name=email placeholder=email>
-		<p><input type=password name=password placeholder=password>
-		<p><input type=password name=password_con placeholder="confirm password">
-		<p><input type=text name=name placeholder="full name">
-		<p><input type=submit value="Sign up">
-	</form>
-</div>
+{% block js %}
+	<script>$('#nav_signup').addClass('active')</script>
 {% endblock %}
