[templates] Try at fixing fuckup

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,4 @@
-{% extends "navbar.html" %}
+{# {% extends "navbar.html" %} #}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,7 +13,7 @@
 
 	<body>
 		<div class="container">
-			{% block navbar %} {{ super() }} {% endblock %}
+			{#{% block navbar %} {{ super() }} {% endblock %}#}
 			<div id="content">{% block content %}{% endblock %}</div>
 			<div id="footer">
 				{% block footer %}
