[templates] Fix different fuckup

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 	<div class="jumbotron">
 		<h1>Scriptar</h1>
 		<p class="lead"></p>
-		<p><a class="btn btn-lg btn-success" href="{{ url_for('list_uploads') }}" role="button">List uploads</a>
+		<p><a class="btn btn-lg btn-success" href="{{ url_for('list_upload_dirs') }}" role="button">List uploads</a>
 		</p>
 	</div>
 
