[templates] Fixing fuckup try #2

--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
+{% extends "navbar.html" %}
 
 {% block title %}Index{% endblock %}
 
 {% block content %}
+	{% block navbar %} {{ super() }} {% endblock %}
 	<div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4 col-xs-12 upload-box">
 		<input id="upload-input" type="file" name="file" multiple></br>
 
