--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% extends "navbar.html" %}
 
 {% block title %}Index{% endblock %}
 {% block head %}
@@ -6,6 +7,7 @@
 {% endblock %}
 
 {% block content %}
+	{% block navbar %} {{ super() }} {% endblock %}
 
 	<div class="jumbotron">
 		<h1>Scriptar</h1>
