--- a/templates/list_uploads.html
+++ b/templates/list_uploads.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
+{% extends "navbar.html" %}
 
 {% block title %}Uploads{% endblock %}
 
 {% block content %}
+	{% block navbar %} {{ super() }} {% endblock %}
 	<div class="jumbotron">
 		<h1>Uploaded files</h1>
 		{% if files %}
