--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
+{% extends "navbar.html" %}
 
 {% block title %}Index{% endblock %}
 
 {% block content %}
+	{% block navbar %} {{ super() }} {% endblock %}
 	<div class="jumbotron">
 		<h1>Login</h1>
 		<form method="post">
