--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -3,7 +3,7 @@
 {% block title %}Index{% endblock %}
 
 {% block content %}
-	<div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4 col-xs-12 upload-box">
+	<div class="jumbotron">
 		<input id="upload-input" type="file" name="file" multiple></br>
 
 		Decscription<br>
