--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,6 +13,15 @@
 			<p><input type=text name=name placeholder="full name" value="{% if name %}{{name}}{% endif %}">
 			<p><input type=submit value="Sign up">
 		</form>
+		{% with messages = get_flashed_messages(with_categories=true) %}
+			{% if messages %}
+				<ul class=flashes>
+					{% for category, message in messages %}
+						<li class="{{ category }}">{{ message }}</li>
+					{% endfor %}
+				</ul>
+			{% endif %}
+		{% endwith %}
 	</div>
 {% endblock %}
 
