[profile] remove url prefix, as it seems to be the source of the bug

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,7 @@
 							{{ nav_link('login', 'Log in') }}
 							{{ nav_link('signup', 'Sign up') }}
 						{% else %}
-							{{ nav_link('profile/', 'Profile') }} 
+							{{ nav_link('profile', 'Profile') }} 
 							{{ nav_link('file_upload', 'Upload') }}
 							{{ nav_link('logout', 'Log out') }}
 						{% endif %}
