--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,9 +20,20 @@
 							{{ nav_link('login', 'Log in') }}
 							{{ nav_link('signup', 'Sign up') }}
 						{% else %}
-							{{ nav_link('profile_app.profile', 'Profile') }} 
-							{{ nav_link('file_upload', 'Upload') }}
-							{{ nav_link('logout', 'Log out') }}
+							<div class="dropdown">
+								<button class="btn btn-default dropdown-toggle" type="button" id="profile_menu" data-toggle="dropdown">Tutorials
+									<span class="caret"></span></button>
+								<ul class="dropdown-menu" role="menu" aria-labelledby="profile_menu">
+									{{ drop_link('profile_app.profile', 'Profile') }}
+									{{ drop_link('file_upload', 'Upload') }}
+									<li role="presentation" class="divider"></li>
+									{{ drop_link('logout', 'Log out') }}
+									<!--<li role="presentation"><a role="menuitem" tabindex="-1" href="#">HTML</a></li>-->
+									<!--<li role="presentation"><a role="menuitem" tabindex="-1" href="#">CSS</a></li>-->
+									<!--<li role="presentation"><a role="menuitem" tabindex="-1" href="#">JavaScript</a></li>-->
+									<!--<li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>-->
+								</ul>
+							</div>
 						{% endif %}
 					</ul>
 				</nav>
@@ -38,6 +49,7 @@
 			</div>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		{% block js %}{% endblock %}
 	</body>
 </html>
