[templates] fix dropdown link macro

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,5 @@
 {% from "macros.html" import nav_link with context %}
+{% from "macros.html" import drop_link with context %}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
