[templates] change dropdown menu title

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,8 +22,7 @@
 							{{ nav_link('signup', 'Sign up') }}
 						{% else %}
 							<div class="dropdown">
-								<button class="btn btn-default dropdown-toggle" type="button" id="profile_menu" data-toggle="dropdown">Tutorials
-									<span class="caret"></span></button>
+								<button class="btn btn-default dropdown-toggle" type="button" id="profile_menu" data-toggle="dropdown">Profile</button>
 								<ul class="dropdown-menu" role="menu" aria-labelledby="profile_menu">
 									{{ drop_link('profile_app.profile', 'Profile') }}
 									{{ drop_link('file_upload', 'Upload') }}
