--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,8 @@
 <html lang="en">
 	<head>
 		{% block head %}
-			<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+			<!--<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">-->
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 			<link href="/static/style.css" rel="stylesheet">
 			<link rel="shortcut icon" type="image/png" href="static/favicon.png"/>
 			<title>{% block title %}{% endblock %}</title>
@@ -22,19 +23,15 @@
 							{{ nav_link('signup', 'Sign up') }}
 						{% else %}
 							<li><div class="dropdown">
-								<button class="btn btn-default dropdown-toggle" type="button" id="profile_menu" data-toggle="dropdown">Profile<span class="caret"></span></button>
-								<ul class="dropdown-menu" role="menu" aria-labelledby="profile_menu">
-									{{ drop_link('profile_app.profile', 'Profile') }}
-									{{ drop_link('file_upload', 'Upload') }}
-									<li role="presentation" class="divider"></li>
-									{{ drop_link('logout', 'Log out') }}
-									<!--<li role="presentation"><a role="menuitem" tabindex="-1" href="#">HTML</a></li>-->
-									<!--<li role="presentation"><a role="menuitem" tabindex="-1" href="#">CSS</a></li>-->
-									<!--<li role="presentation"><a role="menuitem" tabindex="-1" href="#">JavaScript</a></li>-->
-									<!--<li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>-->
-								</ul>
-							</div></li>
-						{% endif %}
+									<button class="btn btn-default dropdown-toggle" type="button" id="profile_menu" data-toggle="dropdown">Profile<span class="caret"></span></button>
+									<ul class="dropdown-menu" role="menu" aria-labelledby="profile_menu">
+										{{ drop_link('profile_app.profile', 'Profile') }}
+										{{ drop_link('file_upload', 'Upload') }}
+										<li role="presentation" class="divider"></li>
+										{{ drop_link('logout', 'Log out') }}
+									</ul>
+								</div></li>
+							{% endif %}
 					</ul>
 				</nav>
 				<a href="{{ url_for('index') }}"><h3 class="text-muted">Scriptar</h3></a>
@@ -49,7 +46,7 @@
 			</div>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 		{% block js %}{% endblock %}
 	</body>
 </html>
