--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
 	<head>
 		{% block head %}
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/4.0.2/bootstrap-material-design.min.css" integrity="sha256-X/mlyZAafJ8j5e74pWh4+qNUD1zurCvLA6hODVobQX0=" crossorigin="anonymous" />
+			<link rel="stylesheet" href="http://bootswatch.com/darkly/bootstrap.min.css" crossorigin="anonymous">
 			<link href="/static/style.css" rel="stylesheet">
 			<link rel="shortcut icon" type="image/png" href="static/favicon.png"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
