--- a/templates/macros.html
+++ b/templates/macros.html
@@ -7,6 +7,6 @@
 {% endmacro %}
 
 {% macro drop_link(endpoint, name) %}
-<li role="presentation"><a role="menuitem" tabindex="-1" href="{{ url_for(endpoint) }}">{{name}}</a></li>
+<li><a href="{{ url_for(endpoint) }}">{{name}}</a></li>
 {% endmacro %}
 
