--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,41 +4,41 @@
 
 {% block content %}
 	<div class="jumbotron">
-		<h1>Sign up</h1>
+		<h2>Sign up</h2></br>
 		<form class="form-horizontal" method="post">
 			<fieldset>
 				<div class="form-group">
 					<label for="inputUsername" class="col-lg-2 control-label">Username</label>
-					<div class="col-lg-10">
+					<div class="col-lg-8">
 						<input class="form-control" id="inputUsername" placeholder="Username" type="text" name="username" value="{% if username %}{{username}}{% endif %}">
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="inputEmail" class="col-lg-2 control-label">Email</label>
-					<div class="col-lg-10">
+					<div class="col-lg-8">
 						<input class="form-control" id="inputEmail" placeholder="Email" type="email" name="email" value="{% if email %}{{email}}{% endif %}">
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="inputPassword" class="col-lg-2 control-label">Password</label>
-					<div class="col-lg-10">
+					<div class="col-lg-8">
 						<input class="form-control" id="inputPassword" placeholder="Password" type="password" name="password">
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="inputPassword_con" class="col-lg-2 control-label">Confirm Password</label>
-					<div class="col-lg-10">
+					<div class="col-lg-8">
 						<input class="form-control" id="inputPassword_con" placeholder="Password confirmation" type="password" name="password_con">
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="inputName" class="col-lg-2 control-label">Name</label>
-					<div class="col-lg-10">
+					<div class="col-lg-8">
 						<input class="form-control" id="inputName" placeholder="Name" type="text" name="Name" value="{% if name %}{{name}}{% endif %}">
 					</div>
 				</div>
 				<div class="form-group">
-					<div class="col-lg-10 col-lg-offset-2">
+					<div class="col-lg-8 col-lg-offset-2">
 						<button type="submit" class="btn btn-primary">Submit</button>
 						<button type="reset" class="btn btn-default">Cancel</button>
 					</div>
