--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 	<div class="jumbotron">
-		<h2>Sign up</h2></br>
+		<h2>Sign up</h2>
 		<form class="form-horizontal" method="post">
 			<fieldset>
 				<div class="form-group">
@@ -39,8 +39,8 @@
 				</div>
 				<div class="form-group">
 					<div class="col-lg-8 col-lg-offset-2">
-						<button type="submit" class="btn btn-primary">Submit</button>
-						<button type="reset" class="btn btn-default">Cancel</button>
+						<input type="submit" class="btn btn-primary" value="Submit">
+						<input type="reset" class="btn btn-default" value="Cancel">
 					</div>
 				</div>
 			</fieldset>
