[templates] Change signup request to post

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -45,7 +45,7 @@
 		<!--</div>-->
 		<!--</fieldset>-->
 		<!--</form>-->
-		<form>
+		<form method="post">
 			<div class="form-group">
 				<label for="username">Username:</label>
 				<input type="text" class="form-control" id="username" name="username">
