--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,29 +5,31 @@
 {% block content %}
 	<div class="jumbotron">
 		<h2>Sign up</h2>
-		<form method="post" class="col-lg-8">
-			<div class="form-group">
-				<label for="username">Username:</label>
-				<input type="text" class="form-control" id="username" name="username">
-			</div>
-			<div class="form-group">
-				<label for="email">Email:</label>
-				<input type="email" class="form-control" id="email" name="email">
-			</div>
-			<div class="form-group">
-				<label for="pwd">Password:</label>
-				<input type="password" class="form-control" id="pwd" name="password">
-			</div>
-			<div class="form-group">
-				<label for="pwd_con">Confirm password:</label>
-				<input type="password" class="form-control" id="pwd_con" name="password_con">
-			</div>
-			<div class="form-group">
-				<label for="name">Name:</label>
-				<input type="text" class="form-control" id="name" name="name">
-			</div>
-			<button type="submit" class="btn btn-default">Submit</button>
-		</form>
+		<div class="row">
+			<form method="post" class="col-lg-8">
+				<div class="form-group">
+					<label for="username">Username:</label>
+					<input type="text" class="form-control" id="username" name="username">
+				</div>
+				<div class="form-group">
+					<label for="email">Email:</label>
+					<input type="email" class="form-control" id="email" name="email">
+				</div>
+				<div class="form-group">
+					<label for="pwd">Password:</label>
+					<input type="password" class="form-control" id="pwd" name="password">
+				</div>
+				<div class="form-group">
+					<label for="pwd_con">Confirm password:</label>
+					<input type="password" class="form-control" id="pwd_con" name="password_con">
+				</div>
+				<div class="form-group">
+					<label for="name">Name:</label>
+					<input type="text" class="form-control" id="name" name="name">
+				</div>
+				<button type="submit" class="btn btn-default">Submit</button>
+			</form>
+		</div>
 
 		{% with messages = get_flashed_messages(with_categories=true) %}
 			{% if messages %}
