--- a/templates/login.html
+++ b/templates/login.html
@@ -4,11 +4,27 @@
 
 {% block content %}
 	<div class="jumbotron">
-		<h1>Login</h1>
-		<form method="post">
-			<p><input type=text name=username placeholder=username>
-			<p><input type=password name=password placeholder=password>
-			<p><input type=submit value=Login>
-		</form>
+		<h2>Login</h2>
+		<!--<form method="post">-->
+			<!--<p><input type=text name=username placeholder=username>-->
+			<!--<p><input type=password name=password placeholder=password>-->
+			<!--<p><input type=submit value=Login>-->
+		<!--</form>-->
+		<div class="row">
+			<form method="post" class="col-lg-8">
+				<div class="form-group">
+					<label for="username">Username:</label>
+					<input type="text" class="form-control" id="username" name="username">
+				</div>
+				<div class="form-group">
+					<label for="pwd">Password:</label>
+					<input type="password" class="form-control" id="pwd" name="password">
+				</div>
+				<div class="checkbox">
+					<label><input type="checkbox"> Remember me</label>
+				</div>
+				<button type="submit" class="btn btn-primary">Submit</button>
+			</form>
+		</div>
 	</div>
 {% endblock %}
