--- a/templates/signup.html
+++ b/templates/signup.html
@@ -27,7 +27,8 @@
 					<label for="name">Name:</label>
 					<input type="text" class="form-control" id="name" name="name">
 				</div>
-				<button type="submit" class="btn btn-default">Submit</button>
+				<button type="submit" class="btn btn-primary">Submit</button>
+				<button type="reset" class="btn btn-default">Cancel</button>
 			</form>
 		</div>
 
