[templates] login checkbox

--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
 					<input type="password" class="form-control" id="pwd" name="password">
 				</div>
 				<div class="checkbox">
-					<label><input type="checkbox" name="remember" value="c"> Remember me</label>
+					<label><input type="checkbox" name="remember"> Remember me</label>
 				</div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>
