--- a/templates/login.html
+++ b/templates/login.html
@@ -21,9 +21,9 @@
 					<input type="password" class="form-control" id="pwd" name="password">
 				</div>
 				<div class="checkbox">
-					<label><input type="checkbox" name="remember"> Remember me</label>
+					<label><input type="checkbox" name="remember" checked> Remember me</label>
 				</div>
-				<button type="submit" class="btn btn-primary">Submit</button>
+				<button type="submit" class="btn btn-primary">Login</button>
 			</form>
 		</div>
 	</div>
