[templates] fix navbar padding

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
 	</head>
 
 	<body>
-		<div class="navbar navbar-default">
+		<div class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
 					<a href="{{ url_for('index') }}" class="navbar-brand">Scriptar</a>
