--- a/static/style.css
+++ b/static/style.css
@@ -8,60 +8,7 @@
 img {
 	max-width: 100%;
 }
-
-/*h4 {
-	padding-bottom: 30px;
+body {
+	padding-top: 70px;
 }
 
-.btn:focus, .upload-btn:focus{
-	outline: 0 !important;
-}
-
-.row {
-	margin-top: 80px;
-}
-
-.upload-btn {
-	color: #ffffff;
-	background-color: #F89406;
-	border: none;
-	width: 200px;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.upload-btn:hover,
-.upload-btn:focus,
-.upload-btn:active,
-.upload-btn.active {
-	color: #ffffff;
-	background-color: #FA8900;
-	border: none;
-}
-
-.upload-box{
-	padding: 10px;
-	border: 2px solid black;
-	border-radius: 5px;
-	position: center;
-
-}
-
-.progress{
-	margin: 10px;
-}
-
-.glyphicon {
-	font-size: 5em;
-	color: #9CA3A9;
-}
-
-.panel {
-	padding: 10px;
-}
-
-#upload-input {
-	display: none;
-}
-*/
