--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -11,8 +11,8 @@
 
 		Name<br>
 		<input id="script_name" type="text" name="script_name"><br>
-
-		<button id="submit-file-upload" class="btn" type="button">Upload File</button>
+        
+		<button id="submit-file-upload" class="btn btn-default" type="button">Upload File</button>
 
 		<div class="progress">
 			<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
