--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -3,25 +3,29 @@
 {% block title %}Index{% endblock %}
 
 {% block content %}
-	<div class="jumbotron">
-		<input id="upload-input" type="file" name="file" multiple></br>
+<div class="jumbotron">
+    <input id="upload-input" type="file" name="file" multiple></br>
 
-		Decscription<br>
-		<input id="description" type="text" name="description"><br>
+    <div class="form-group">
+        <label for="description">Description:</label>
+        <input id="description" type="text" name="description"><br>
+    </div>    
 
-		Name<br>
-		<input id="script_name" type="text" name="script_name"><br>
-        
-		<button id="submit-file-upload" class="btn btn-default" type="button">Upload File</button>
+    <div class="form-group">
+        <label for="script_name">Name:</label>
+        <input id="script_name" type="text" name="script_name"><br>
+    </div>    
 
-		<div class="progress">
-			<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-				<span class="sr-only">0%</span>
-			</div>
-		</div>
-	</div>
+    <button id="submit-file-upload" class="btn btn-default" type="button">Upload File</button>
+
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+            <span class="sr-only">0%</span>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block js %}
-	<script type="text/javascript" src="/static/upload.js"></script>
+<script type="text/javascript" src="/static/upload.js"></script>
 {% endblock %}
