--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -6,25 +6,27 @@
     <div class="jumbotron">
         <h2>Upload File</h2>
         <div class="row">
-            <input id="upload-input" type="file" name="file" multiple></br>
+            <form method="post" class="col-lg-8">
+                <input id="upload-input" class="btn-file" type="file" name="file" multiple></br>
 
-            <div class="form-group">
-                <label for="description">Description:</label>
-                <input id="description" type="text" name="description"><br>
-            </div>    
+                <div class="form-group">
+                    <label for="description">Description:</label>
+                    <input id="description" type="text" name="description"><br>
+                </div>    
 
-            <div class="form-group">
-                <label for="script_name">Name:</label>
-                <input id="script_name" type="text" name="script_name"><br>
-            </div>    
+                <div class="form-group">
+                    <label for="script_name">Name:</label>
+                    <input id="script_name" type="text" name="script_name"><br>
+                </div>    
 
-            <button id="submit-file-upload" class="btn btn-default" type="button">Upload File</button>
+                <button id="submit-file-upload" class="btn btn-default" type="button">Upload File</button>
 
-            <div class="progress">
-                <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-                    <span class="sr-only">0%</span>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                        <span class="sr-only">0%</span>
+                    </div>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 {% endblock %}
