--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -8,7 +8,7 @@
         <div class="row">
             <form method="post" class="col-lg-8">
                 </br>
-                <input id="upload-input" class="btn-file" type="file" name="file" multiple></br>
+                <input id="upload-input" class="btn-file btn-primary" type="file" name="file" multiple></br>
 
                 <div class="form-group">
                     <label for="description">Description:</label>
